feat: FoodImage controller 추가

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ spring:
     - db
 
 springdoc:
-  packages-to-scan: org.k_lab.catchku
+  packages-to-scan: org.konkuk.foodmeter
   default-consumes-media-type: application/json;charset=UTF-8
   default-produces-media-type: application/json;charset=UTF-8
   swagger-ui:
