--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,12 +2,17 @@ spring:
   profiles.include:
     - private
 
+  servlet:
+    multipart:
+      max-file-size: 10MB    # 파일당 최대 업로드 크기 설정
+      max-request-size: 10MB # 요청당 최대 업로드 크기 설정
+
 springdoc:
   packages-to-scan: org.konkuk.foodmeter
   default-consumes-media-type: application/json;charset=UTF-8
   default-produces-media-type: application/json;charset=UTF-8
   swagger-ui:
-    tags-sorter: alpah
+    tags-sorter: alpha
     operations-sorter: alpha
   api-docs:
     path: /api-docs/json
